force-app/main/default/objects/DTE_ErrorLog__c/DTE_ErrorLog__c.object-meta.xml
<CustomObject>
    <description>This object is for error handling within the Salesforce org containing the errors, information and warnings occurred in customisation code and integration.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000000000}</displayFormat>
        <label>Error Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>