force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_App_Version__c.field-meta.xml
<CustomField>
    <fullName>CAA_App_Version__c</fullName>
    <label>App Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>