force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Contact_SPICE_ID__c.field-meta.xml
<CustomField>
    <fullName>CAA_Contact_SPICE_ID__c</fullName>
    <label>Contact SPICE ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>