force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Country__c.field-meta.xml
<CustomField>
    <fullName>CAA_Country__c</fullName>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>