force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Error_Type__c.field-meta.xml
<CustomField>
    <fullName>CAA_Error_Type__c</fullName>
    <label>Error Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>