force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>CAA_Interaction_Id__c</fullName>
    <label>CAA_Interaction_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>