force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Internal_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>CAA_Internal_Error_Code__c</fullName>
    <label>CAA Internal Error Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>