force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Outbound_API_Request_Response_RAW__c.field-meta.xml
<CustomField>
    <fullName>CAA_Outbound_API_Request_Response_RAW__c</fullName>
    <label>CAA Outbound API Request Response RAW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>