force-app/main/default/objects/DTE_ErrorLog__c/fields/CAA_Shift_Code__c.field-meta.xml
<CustomField>
    <fullName>CAA_Shift_Code__c</fullName>
    <label>Shift Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>