force-app/main/default/objects/DTE_ErrorLog__c/fields/CCR_ClassName__c.field-meta.xml
<CustomField>
    <fullName>CCR_ClassName__c</fullName>
    <description>Name of the class in which the error occurred.</description>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>