force-app/main/default/objects/DTE_ErrorLog__c/fields/CCR_ContactId__c.field-meta.xml
<CustomField>
    <fullName>CCR_ContactId__c</fullName>
    <label>Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>