force-app/main/default/objects/DTE_ErrorLog__c/fields/CCR_Function__c.field-meta.xml
<CustomField>
    <fullName>CCR_Function__c</fullName>
    <description>Used By: CCR
Description: Feature in which the error occurred.</description>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linking Engine</fullName>
            </value>
            <value>
                <fullName>Replacement Engine</fullName>
            </value>
            <value>
                <fullName>SPICE Integration</fullName>
            </value>
            <value>
                <fullName>Merge Engine</fullName>
            </value>
            <value>
                <fullName>AssetPurchaseInforUpdate</fullName>
            </value>
            <value>
                <fullName>Massive For Lending Marking</fullName>
            </value>
            <value>
                <fullName>SFDC Internal</fullName>
            </value>
            <value>
                <fullName>AIT Webservice</fullName>
            </value>
            <value>
                <fullName>Order Replacement Integration</fullName>
            </value>
            <value>
                <fullName>Interaction Engine</fullName>
            </value>
            <value>
                <fullName>QURE</fullName>
            </value>
            <value>
                <fullName>Zuora Integration</fullName>
            </value>
            <value>
                <fullName>Stock Movement Integration</fullName>
            </value>
            <value>
                <fullName>Twilio Create Video Room Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>