force-app/main/default/objects/DTE_ErrorLog__c/fields/CCR_Scope__c.field-meta.xml
<CustomField>
    <fullName>CCR_Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>