force-app/main/default/objects/DTE_ErrorLog__c/fields/DTE_Description__c.field-meta.xml
<CustomField>
    <fullName>DTE_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>