force-app/main/default/objects/DTE_ErrorLog__c/fields/DTE_Method__c.field-meta.xml
<CustomField>
    <fullName>DTE_Method__c</fullName>
    <description>Method in which the error occured.</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>