force-app/main/default/objects/DTE_ErrorLog__c/fields/Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Id__c</fullName>
    <label>Log Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>